tests/NormalTests/paczka1/fuzzy1/93064967.err
Error in line 5: AQSCJERCD A972 84,1
Error in line 15: AQSCJERCD S596 11,4
Error in line 7: bOiV A972 56,5
Error in line 22: b0rDIE04Jx S237 51,3
Error in line 39: AQSCJERCD A706 68,6
